--- a/Sejong/css/main.css
+++ b/Sejong/css/main.css
@@ -245,6 +245,28 @@ input {
   }
 }
 /* max width 정해줘야함 */
+.skipnav {
+  z-index: 1000000;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+.skipnav a {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 50px;
+  background-color: #3E3276;
+  color: #fff;
+  transform: translateY(-100%);
+}
+.skipnav a:focus, .skipnav a:active {
+  transform: translateY(0);
+}
+
 header {
   position: relative;
   width: 100%;
@@ -347,7 +369,6 @@ header .header_bottom .wrapper .gnb ul.depth1 {
   gap: 2.52em;
 }
 header .header_bottom .wrapper .gnb ul.depth1 li {
-  border-bottom: 1px solid #E4E4E4;
   /* 하위 메뉴 */
 }
 header .header_bottom .wrapper .gnb ul.depth1 li a {
@@ -446,6 +467,10 @@ header .header_bottom .wrapper .gnb ul.depth1 li .lower_menu ul.depth2 > li ul.d
 header .header_bottom .wrapper .gnb ul.depth1 li .lower_menu ul.depth2 > li ul.depth3 > li > a:hover::before {
   background-color: #3E3276;
 }
+header .header_bottom .wrapper .gnb ul.depth1 li .lower_menu ul.depth2 > li ul.depth3 > li > a:focus {
+  font-weight: 700;
+  color: #3E3276;
+}
 header .header_bottom .wrapper .gnb ul.depth1 li.active a {
   color: #3E3276;
 }
@@ -475,7 +500,7 @@ header .header_bottom .wrapper .mobile_menu {
   right: 0;
   background: #fff;
   width: 18.23em;
-  height: 1000dvh;
+  height: 100dvh;
   box-shadow: 0 4px 20px 0 rgba(0, 0, 0, 0.05);
 }
 header .header_bottom .wrapper .mobile_menu .mobile_wrap {
@@ -505,9 +530,11 @@ header .header_bottom .wrapper .mobile_menu .mobile_wrap .mobile_header_bottom {
   justify-content: center;
   gap: 24px;
   padding: 1.17em;
+  border-bottom: 1px solid #E4E4E4;
 }
 header .header_bottom .wrapper .mobile_menu .mobile_wrap .mobile_header_bottom .login, header .header_bottom .wrapper .mobile_menu .mobile_wrap .mobile_header_bottom .membership {
   font-weight: 700;
+  font-size: 0.88rem;
   color: #3E3276;
   border: 1px solid #3E3276;
   border-radius: 100px;
@@ -547,6 +574,12 @@ header .header_bottom .wrapper .mobile_menu .mobile_wrap .mobile_list_body ul.de
 header .header_bottom .wrapper .mobile_menu .mobile_wrap .mobile_list_body ul.depth1 > li ul.depth2 {
   display: block;
 }
+header .header_bottom .wrapper .mobile_menu .mobile_wrap .mobile_list_body ul.depth1 > li ul.depth2 > li {
+  border-bottom: 1px solid #6857B8;
+}
+header .header_bottom .wrapper .mobile_menu .mobile_wrap .mobile_list_body ul.depth1 > li ul.depth2 > li:last-child {
+  border-bottom: 0;
+}
 header .header_bottom .wrapper .mobile_menu .mobile_wrap .mobile_list_body ul.depth1 > li ul.depth2 > li.active > a > i {
   transform: scale(1, -1);
 }
@@ -575,12 +608,18 @@ header .header_bottom .wrapper .mobile_menu .mobile_wrap .mobile_list_body ul.de
 header .header_bottom .wrapper .mobile_menu .mobile_wrap .mobile_list_body ul.depth1 > li ul.depth2 > li ul.depth3 {
   display: block;
 }
+header .header_bottom .wrapper .mobile_menu .mobile_wrap .mobile_list_body ul.depth1 > li ul.depth2 > li ul.depth3 li {
+  border-bottom: 1px solid #3E3276;
+}
+header .header_bottom .wrapper .mobile_menu .mobile_wrap .mobile_list_body ul.depth1 > li ul.depth2 > li ul.depth3 li:last-child {
+  border-bottom: 0;
+}
 header .header_bottom .wrapper .mobile_menu .mobile_wrap .mobile_list_body ul.depth1 > li ul.depth2 > li ul.depth3 li a {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0.47em 1.17em 0.47em 1.17em;
-  font-size: 17px;
+  padding: 0.58em 2.35em 0.58em 2.35em;
+  font-size: 0.88rem;
   color: #fff;
   font-weight: 400;
   background-color: #6857B8;
@@ -598,6 +637,9 @@ footer .footer_head {
   background-color: #3E4253;
   font-weight: 700;
 }
+footer .footer_head .wrapper {
+  overflow: visible;
+}
 footer .footer_head .wrapper ul.footer_link {
   display: flex;
   align-items: center;
@@ -606,6 +648,9 @@ footer .footer_head .wrapper ul.footer_link > li {
   position: relative;
   flex: 1;
   border-left: 1px solid rgba(255, 255, 255, 0.1);
+}
+footer .footer_head .wrapper ul.footer_link > li.active > a > i {
+  transform: scale(-1);
 }
 footer .footer_head .wrapper ul.footer_link > li > a {
   display: flex;
@@ -621,16 +666,27 @@ footer .footer_head .wrapper ul.footer_link > li > a i {
   line-height: 0;
   width: 0.94rem;
   height: 0.94rem;
-  background-image: url("data:image/svg+xml,%3Csvg width='16' height='16' viewBox='0 0 16 16' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M2.84568 10.3943C2.62675 10.1973 2.609 9.86006 2.80605 9.64113L7.60618 4.30779C7.70732 4.19541 7.85141 4.13124 8.0026 4.13125C8.15379 4.13125 8.29788 4.19542 8.39902 4.3078L13.199 9.64113C13.3961 9.86007 13.3783 10.1973 13.1594 10.3943C12.9404 10.5914 12.6032 10.5736 12.4062 10.3547L8.00259 5.46182L3.59889 10.3547C3.40184 10.5736 3.06462 10.5914 2.84568 10.3943Z' fill='white'/%3E%3C/svg%3E%0A");
+  background-image: url("data:image/svg+xml,%3Csvg width='16' height='16' viewBox='0 0 16 16' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M13.1543 5.60567C13.3733 5.80272 13.391 6.13994 13.1939 6.35887L8.39382 11.6922C8.29268 11.8046 8.14859 11.8688 7.9974 11.8688C7.84621 11.8688 7.70212 11.8046 7.60098 11.6922L2.80098 6.35887C2.60393 6.13993 2.62168 5.80271 2.84062 5.60566C3.05956 5.40862 3.39678 5.42637 3.59382 5.64531L7.99741 10.5382L12.4011 5.6453C12.5982 5.42637 12.9354 5.40862 13.1543 5.60567Z' fill='white'/%3E%3C/svg%3E%0A");
 }
 footer .footer_head .wrapper ul.footer_link > li:last-child {
   border-right: 1px solid rgba(255, 255, 255, 0.1);
 }
 footer .footer_head .wrapper ul.footer_link > li ul.depth2 {
+  display: none;
   z-index: 100;
   position: absolute;
+  bottom: 2.64em;
+  left: 0;
+  background-color: #3E4253;
+  border-radius: 10px 10px 0 0;
+  width: 100%;
+}
+footer .footer_head .wrapper ul.footer_link > li ul.depth2 li {
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+}
+footer .footer_head .wrapper ul.footer_link > li ul.depth2 li a {
   display: flex;
-  flex-direction: column;
+  padding: 0.58em 1.17em;
 }
 footer .footer_body .wrapper {
   display: flex;
@@ -708,12 +764,12 @@ footer .footer_body .wrapper .right_inner .footer_info {
     margin-right: 0;
   }
 }
-@media screen and (max-width: 800px) {
-  footer .footer_body .wrapper .right_inner ul.footer_nav li a {
-    font-size: 0.88rem;
+@media screen and (max-width: 1048px) {
+  footer .footer_head .wrapper ul.footer_link > li ul.depth2 {
+    bottom: 4.11em;
   }
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 805px) {
   footer .footer_head .wrapper ul.footer_link {
     flex-direction: column;
     align-items: normal;
@@ -730,11 +786,24 @@ footer .footer_body .wrapper .right_inner .footer_info {
   footer .footer_info address, .copyright {
     font-size: 0.76rem;
   }
+  footer .footer_head .wrapper ul.footer_link > li ul.depth2 {
+    position: relative;
+    bottom: 2.64em;
+    top: 0;
+    left: 0;
+  }
+  footer .footer_head .wrapper ul.footer_link > li ul.depth2 li a {
+    font-size: 0.88rem;
+  }
 }
-.skipnav {
-  display: none;
+@media screen and (max-width: 800px) {
+  footer .footer_body .wrapper .right_inner ul.footer_nav li a {
+    font-size: 0.88rem;
+  }
+  footer .footer_head .wrapper ul.footer_link > li > a {
+    padding: 0.88em;
+  }
 }
-
 .number1 {
   padding: 2.35em 0 2.35em 0;
 }
@@ -913,7 +982,7 @@ footer .footer_body .wrapper .right_inner .footer_info {
 .visual .mayor_area ul {
   position: absolute;
   display: flex;
-  width: 101%;
+  width: 100%;
   bottom: 0;
   left: 0;
   font-weight: 700;
@@ -1287,6 +1356,10 @@ footer .footer_body .wrapper .right_inner .footer_info {
   font-weight: 700;
   border-right: 1px solid #E4E4E4;
 }
+.number5 .wrapper .today_news .news_layer .tab_head ul li a:focus {
+  color: #fff;
+  background-color: #3E3276;
+}
 .number5 .wrapper .today_news .news_layer .tab_head ul li.active {
   color: #fff;
   background-color: #3E3276;
@@ -1351,6 +1424,7 @@ footer .footer_body .wrapper .right_inner .footer_info {
   height: 100%;
 }
 .number5 .wrapper .sejong_news ul li {
+  position: relative;
   flex: 1;
   overflow: hidden;
   border: 0;
@@ -1361,12 +1435,16 @@ footer .footer_body .wrapper .right_inner .footer_info {
   box-shadow: 0 0 10px 0 rgba(142, 142, 142, 0.2);
 }
 .number5 .wrapper .sejong_news ul li a {
-  position: relative;
   display: flex;
   flex-direction: column;
   height: 100%;
 }
+.number5 .wrapper .sejong_news ul li a:hover .photo img, .number5 .wrapper .sejong_news ul li a:focus .photo img {
+  transform: scale(1.1);
+  transition: 0.3s;
+}
 .number5 .wrapper .sejong_news ul li a .blog {
+  z-index: 100;
   position: absolute;
   top: 1.17rem;
   right: 0;
@@ -1383,6 +1461,7 @@ footer .footer_body .wrapper .right_inner .footer_info {
 }
 .number5 .wrapper .sejong_news ul li a .photo {
   height: 100%;
+  overflow: hidden;
 }
 .number5 .wrapper .sejong_news ul li a .photo img {
   width: 100%;
@@ -1457,6 +1536,11 @@ footer .footer_body .wrapper .right_inner .footer_info {
 }
 .number6 .wrapper .sns_content .inner .sejong_tv01 {
   flex: 1;
+  color: #fff;
+  border: 1px solid #E4E4E4;
+  border-radius: 0.5rem;
+  box-shadow: 0 0 10px 0 rgba(142, 142, 142, 0.2);
+  border: 0;
 }
 .number6 .wrapper .sns_content .inner .sejong_tv01 a {
   position: relative;
@@ -1465,7 +1549,12 @@ footer .footer_body .wrapper .right_inner .footer_info {
   overflow: hidden;
   border-radius: 10px;
 }
+.number6 .wrapper .sns_content .inner .sejong_tv01 a:hover .photo img, .number6 .wrapper .sns_content .inner .sejong_tv01 a:focus .photo img {
+  transform: scale(1.1);
+  transition: 0.3s;
+}
 .number6 .wrapper .sns_content .inner .sejong_tv01 a .youtube {
+  z-index: 100;
   position: absolute;
   top: 1.17rem;
   right: 0;
@@ -1491,6 +1580,11 @@ footer .footer_body .wrapper .right_inner .footer_info {
 }
 .number6 .wrapper .sns_content .inner .sejong_tv02 {
   flex: 1;
+  color: #fff;
+  border: 1px solid #E4E4E4;
+  border-radius: 0.5rem;
+  box-shadow: 0 0 10px 0 rgba(142, 142, 142, 0.2);
+  border: 0;
 }
 .number6 .wrapper .sns_content .inner .sejong_tv02 a {
   position: relative;
@@ -1499,7 +1593,12 @@ footer .footer_body .wrapper .right_inner .footer_info {
   border-radius: 10px;
   height: 15em;
 }
+.number6 .wrapper .sns_content .inner .sejong_tv02 a:hover .photo img, .number6 .wrapper .sns_content .inner .sejong_tv02 a:focus .photo img {
+  transform: scale(1.1);
+  transition: 0.3s;
+}
 .number6 .wrapper .sns_content .inner .sejong_tv02 a .youtube {
+  z-index: 100;
   position: absolute;
   top: 1.17rem;
   right: 0;
@@ -1745,5 +1844,10 @@ footer .footer_body .wrapper .right_inner .footer_info {
   }
   .number1 .serach .serach_content {
     flex-direction: column;
+  }
+}
+@media (max-width: 640px) {
+  body, html {
+    font-size: 15px;
   }
 }
