--- a/Sejong/scss/__common.scss
+++ b/Sejong/scss/__common.scss
@@ -19,7 +19,7 @@ $header-h: 90px;
 
 /* 컬러 */
 $primary-color-50: #3E3276;
-$hover-color-60 :#51419A;
+$hover-color-60:#51419A;
 $pressed-color-70:#6857B8;
 $secondary-color: #AE2668;
 $title-color: #1D1D1D;
@@ -32,6 +32,7 @@ $bg-color:#fff;
 $bg-color-2: #F8F8F8;
 $footer:#343849;
 $footer-header:#3E4253;
+$footer-depth2 :#3E4249;
 /*******/
 
 
