--- a/Sejong/css/main.css
+++ b/Sejong/css/main.css
@@ -1345,7 +1345,7 @@ footer .footer_body .wrapper .right_inner .footer_info {
   box-shadow: 0 0 0 1px #E4E4E4 inset;
 }
 .number5 .wrapper .today_news .news_layer .tab_head ul li {
-  flex: 1;
+  width: 100%;
   color: #555;
 }
 .number5 .wrapper .today_news .news_layer .tab_head ul li a {
@@ -1363,6 +1363,9 @@ footer .footer_body .wrapper .right_inner .footer_info {
 .number5 .wrapper .today_news .news_layer .tab_head ul li.active {
   color: #fff;
   background-color: #3E3276;
+}
+.number5 .wrapper .today_news .news_layer .tab_head .more {
+  width: 30%;
 }
 .number5 .wrapper .today_news .news_layer .tab_head .more a {
   display: flex;
