--- a/Sejong/scss/main.scss
+++ b/Sejong/scss/main.scss
@@ -444,7 +444,7 @@
                         display: flex;
                         box-shadow: 0 0 0 1px $disalbe inset;
                         li {
-                            flex: 1;
+                            width: 100%;
                             color: $body-color;
                            a {
                             @include flex-center;
@@ -463,6 +463,7 @@
                         }
                     }
                     .more {
+                        width: 30%;
                         a {
                             @include flex-center;
                             padding: 0.58em 1.17em;
