--- a/Sejong/css/main.css
+++ b/Sejong/css/main.css
@@ -381,7 +381,7 @@ header .header_bottom .wrapper .gnb ul.depth1 li a {
   color: #1D1D1D;
 }
 header .header_bottom .wrapper .gnb ul.depth1 li .lower_menu {
-  display: none;
+  visibility: hidden;
   z-index: 100;
   position: absolute;
   top: 90px;
@@ -391,6 +391,13 @@ header .header_bottom .wrapper .gnb ul.depth1 li .lower_menu {
   overflow: hidden;
   background-color: #fff;
   border-top: 1px solid #E4E4E4;
+  opacity: 0;
+  transition: opacity 0.2s; /* 부드럽게 나타나는 효과 */
+}
+header .header_bottom .wrapper .gnb ul.depth1 li .lower_menu.active {
+  display: flex; /* 메뉴를 열 때만 block으로 설정 */
+  visibility: visible;
+  opacity: 1;
 }
 header .header_bottom .wrapper .gnb ul.depth1 li .lower_menu .title {
   position: relative;
